Stabilize allocation metric and sync maintenance docs